png for display on github added

--- a/Synchrotrons_and_pdb_entries.ipynb
+++ b/Synchrotrons_and_pdb_entries.ipynb
@@ -1486,6 +1486,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Synchrotrons and PDB submissions over time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1718,6 +1725,13 @@
     "                        grid=True, \n",
     "                        xlabel='Year', \n",
     "                        ylabel='Structures')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![synchrotrons_pdbs]('synchrotrons_and_pdbs.png')"
    ]
   },
   {
