--- a/Synchrotrons_and_pdb_entries.ipynb
+++ b/Synchrotrons_and_pdb_entries.ipynb
@@ -1731,7 +1731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![synchrotrons_pdbs]('synchrotrons_and_pdbs.png')"
+    "![synchrotrons_pdbs](synchrotrons_and_pdbs.png)"
    ]
   },
   {
